[tool.poetry]
name = "ip-checker-web"
version = "0.1.0"
description = ""
authors = ["dannyderden <danyderden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
